header alignment fixed, chatbot button shows during chat fixed translation and description of uses added

--- a/legal-ai/src/components/index.css
+++ b/legal-ai/src/components/index.css
@@ -6,133 +6,10 @@
 @tailwind utilities;
 
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-.App {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-body {
-        padding: 0;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        background: #ecf0f3;
-        /* background: #f295c3; */
-    }
 
     .container {
         @apply rounded-lg;
         box-shadow: 13px 13px 20px #D8B4FE, -13px -13px 20px #D8B4FE;
         /* box-shadow: 13px 13px 20px #e8afcc, -13px -13px 20px #e8afcc; */
 
-    }
-    .row button {
-        width: 84px;
-        height: 30px;
-        
-        border: none;
-        outline: none;
-        margin: 5px;
-        border-radius: 4px;
-        transition: .1s;
-        box-shadow: 5px 5px 8px #00000020, -5px -5px 8px #D8B4FE;
-
-        /* box-shadow: 5px 5px 8px #00000020,-5px -5px 8px #e8afcc; */
-    }
-
-    .row button:hover {
-        box-shadow: inset 5px 5px 8px rgba(16, 16, 16, .1),
-            inset -5px -5px 8px #fff;
-        background: #fff;
-    }
-    /* .btn_num button{
-        background:#cbd5e1 ;
-    }
-
-    .btn_num button:hover{
-        background:#262729 ;
-        color: white;
-        box-shadow: none;
-    } */
-    /* Responsive styles for .container */
-    /* @media (min-width: 0px) { 
-        .container {
-            @apply w-[290px] px-1 py-1; 
-        }
-    }
-
-    @media (min-width: 600px) { 
-        .container {
-            @apply w-[400px] px-5 py-4; 
-        }
-    } */
-
-    .content {
-        width: 100%;
-        margin-top: 1.7em;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    
-
-    .display #screen {
-        margin-bottom: .5em;
-        /* width: 100%;
-        height: 70px; */
-        font-size: 35px;
-        outline: none;
-        border: none;
-        text-align: right;
-        padding-right: .5em;
-        background: #ecf0f3;
-        border-radius: 6px;
-        box-shadow: inset 8px 8px 8px #cbced1,
-            inset -8px -8px 8px #ffffff;
-    }
-
-    #eval {
-        background: #33ccff;
-        color: #fff;
-        box-shadow: inset 5px 5px 8px #66d9ff,
-            inset -5px -5px 8px #00ace6;
-    }
-
-    #eval:hover {
-        box-shadow: inset 5px 5px 8px #00ace6,
-            inset -5px -5px 8px #00ace6;
-    }
-
-    #ac {
-        background: #33cc33;
-        color: #fff;
-    }
-
-    #ac:hover {
-        box-shadow: inset 5px 5px 8px #2eb82e,
-            inset -5px -5px 8px #33cc33;
-    }
-
-    #ce {
-        background: #ff3399;    
-        color: #fff;
-    }
-
-    #ce:hover {
-        box-shadow: inset 5px 5px 8px #e60073,
-            inset -5px -5px 8px #ff3399;
     }
